--- a/css/index.css
+++ b/css/index.css
@@ -44,10 +44,9 @@ body {
     bottom: 0;
     left: 0;
     right: 0;
-    opacity: .9; 
-    /* width: 100%;
-    height: 100%; */
-    height: 100vh;  
+    /* opacity: .9;  */
+    /* width: 100%; */
+    height: 100%;  
 }
 
 .hero-words {
