--- a/css/events.css
+++ b/css/events.css
@@ -2,19 +2,16 @@ body{
   /* background-color: snow; */
   /* background-image: url('https://images.unsplash.com/photo-1495841020177-1919ede29bd8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2081&q=80'); */
   background-color: rgb(255, 255, 255);
-  background-size: cover;
-  background-position: center;
 }
 
-.border {
-  /* border-bottom-style: groove; */
-  border-bottom: 1px solid grey;
-}
+.events { 
+  margin: 0 auto; 
+  text-align: center; 
 
-.events {
-  /* max-width: 100%;  */
-  margin: 0 auto;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 /* .events h2 {
@@ -26,19 +23,13 @@ body{
   margin-top: 3em;
 }
 
-
-
-.shadow {
-  -webkit-box-shadow: 3px 3px 5px 6px #ccc;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
-  -moz-box-shadow:    3px 3px 5px 6px #ccc;  /* Firefox 3.5 - 3.6 */
-  box-shadow:         3px 3px 5px 6px #ccc;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
-}
-
 .upcoming {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  flex:auto;
   /* padding-top: 2em;  */
   /* height: 35vh; */
   /* border-bottom: 0.1em solid grey; */
@@ -48,10 +39,11 @@ body{
   background-position: center; */
 
   /* min-height: 50vh; */
-  width: 100%;
 } 
 
 .past {
+  flex:auto;  
+  text-align: center;
   padding: 1em;
   margin-top: 2em;
   margin-bottom: 2em;
@@ -62,14 +54,13 @@ body{
   /* height: 60vh; */
   /* background-image: url('https://images.unsplash.com/photo-1516053256215-94022213b13c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1267&q=80'); */
 
-  background-size: cover;
-  background-position: center;
+  /* background-size: cover;
+  background-position: center; */
 
-  width: 100%;
 }
-.widthSet {
+/* .widthSet {
   width: 500px;
-}
+} */
 
 
 hr.style13 {
