--- a/css/header.css
+++ b/css/header.css
@@ -102,20 +102,12 @@ nav ul li {
 
 /* hover, active, and current page effects */
 nav a:hover {
-  color: blue;
+  border: 0.5px solid #f1edee;
+  border-radius: 3px;
 }
     
 nav a:active {
-  text-shadow: 2px 2px 8px cadetblue;
-}
-  
-/* .current-page {
-  background-image: linear-gradient(cornflowerblue, cadetblue);
-} */
-
-/* welcome message */
-.welcome {
-  color:#cd853f;
+  background-color: #f1edee;
 }
 
 /* Screen is in 'landscape' orientation (desktop view) */
