--- a/css/index.css
+++ b/css/index.css
@@ -2,11 +2,6 @@ body {
   background-color: rgb(255, 255, 255);
 }
 
-.border {
-  /* border-bottom-style: groove; */
-  border-bottom: 1px solid grey;
-}
-
 /****************/
 /* HERO Section */
 /****************/
@@ -15,30 +10,28 @@ body {
   flex-direction: column;
   flex-wrap: wrap;
 
-  flex:auto;
-  
-  background-image: url('https://images.unsplash.com/photo-1473091534298-04dcbce3278c?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80');
+  flex: auto;
+
+  background-image: url("https://images.unsplash.com/photo-1473091534298-04dcbce3278c?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80");
 
   align-items: flex-start;
-  justify-content: flex-start; 
-  
+  justify-content: flex-start;
+
   min-height: 100vh;
   /* margin: 0; */
   /* margin-bottom: 3em; */
-  padding-left: 7em; 
+  padding-left: 5em;
 
   background-size: cover;
-  background-position: right bottom; 
+  background-position: right bottom;
   background-color: transparent;
 
   overflow: auto;
   /* border: 1px solid blue; */
 }
 
-
-
 /* .bg{ */
-  /* flex: auto;
+/* flex: auto;
   position: absolute;
   background-image: url('https://images.unsplash.com/photo-1473091534298-04dcbce3278c?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80');
   background-size: cover;
@@ -48,12 +41,11 @@ body {
     bottom: 0;
     left: 0;
     right: 0; */
-    /* opacity: .9;  */
-    /* width: 100%; */
+/* opacity: .9;  */
+/* width: 100%; */
 
-    /* min-height: 100vh; */
+/* min-height: 100vh; */
 
-    
 /* } */
 
 .hero-words {
@@ -63,13 +55,12 @@ body {
   flex-direction: column;
 
   width: 65%;
-
 }
 
 .hero-words h1 {
   font-size: 2.8em;
   /* font-variant: small-caps; */
-  color: #222222;
+  color: #28399b;
 }
 
 .hero-words p {
@@ -77,13 +68,12 @@ body {
   color: grey;
   margin: 0;
   margin-bottom: 1.5em;
-
 }
 
 #connect {
   padding: 0.5em 2em;
 
-  background-color: #03f855;
+  background-color: #29a1c5;
   font-family: inherit;
   font-size: 1.2em;
   font-weight: 900;
@@ -108,8 +98,8 @@ body {
 }
 
 .hero-btn:hover {
-  border:1px solid #398d55;
-} 
+  border: 1px solid #398d55;
+}
 
 /****************************/
 /* Main - Vacation Packages */
@@ -121,11 +111,14 @@ body {
   max-width: 900px;
   margin: 0 auto;
   text-align: center;
+
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.index-main h2 {
-  margin-left: 0.5rem;
-  color: rgb(63, 70, 99);
+.intro h2,
+.intro p {
+  flex: auto;
 }
 
 .section-margin {
@@ -159,10 +152,7 @@ body {
   text-align: center;
 
   background-color: #e4dedf;
-  
 }
-
-
 
 .service-box {
   display: flex;
@@ -180,7 +170,7 @@ body {
   padding: 0.5em;
 }
 
-.aboutus h2{
+.aboutus h2 {
   margin-top: 3em;
 }
 
@@ -190,7 +180,7 @@ body {
 }
 
 .bottom-arrow:after {
-  content:'';
+  content: "";
   position: absolute;
   left: 0;
   right: 0;
@@ -205,7 +195,7 @@ body {
 
 .outer-container {
   display: flex;
-  
+
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
@@ -223,15 +213,14 @@ body {
   /* width: 100%; */
 }
 
-
 .sub-container1 {
   text-align: left;
   flex-wrap: wrap;
   border-right-style: groove;
-  border-color: rgb(63, 120, 193);
+  border-color: #28399b;
   min-width: 30%;
-  padding:1em;
-  padding-left:3em;
+  padding: 1em;
+  padding-left: 3em;
 }
 
 .sub-container2 {
@@ -242,16 +231,15 @@ body {
   padding: 1em;
   /* padding:2em; */
   /* padding-right: 1em; */
-
 }
 
 .active {
   color: #cd853f;
 }
-/* Responsive sizingfor phone screen size */
+/* Responsive sizing for phone screen size */
 @media screen and (max-width: 600px) {
   .hero {
-    padding-left: 2em;
+    padding-left: 1em;
     padding-right: 1em;
 
     background-position: left bottom;
@@ -279,10 +267,10 @@ body {
     border-bottom-style: groove;
     width: 100%;
   }
-  
+
   .sub-container2 {
     flex-wrap: wrap;
-    width: 100%; 
+    width: 100%;
   }
 
   .hero-words {
@@ -290,11 +278,7 @@ body {
 
     width: 100%;
   }
- 
 }
 
 @media (orientation: landscape) {
-
-
-
 }
