--- a/css/header.css
+++ b/css/header.css
@@ -3,133 +3,156 @@
 /******************/
 
 /* header mainly contains logo and navbar */
-header{
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-    
-  background-color: #FFFBFC;
-}
+header {
+  padding-left: 1em;
+  padding-right: 0.5em;
 
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  background-color: #fffbfc;
+
+  flex-wrap: wrap;
+}
 /********/
 /* Logo */
 /********/
 
-.logo-image {
-  height: 100px;
-  padding: 0;
-  margin: 0; 
-  /* padding: 0.5em 0.5em; */
-  background: transparent;
-}
-
 .logo {
-  height: 100px;
+  width: 100px;
+  padding: 0;
 }
-
 
 /**********/
 /* Navbar */
 /**********/
-
-/* Hamburger menu */
-/* .btn-menu {
-  /* padding: 0.5rem 15rem; */
-  
-  /* border-width: 0;
-  background-color: transparent;
-  margin-bottom: 5px; */
-/* }  */
-
-.btn-menu{
-  position: absolute;
-  /* always keep ham on top of everything */
-  z-index: 1000;
-  top: 30px;
-  right: 50px;
-  width: 30px;
-  height: 35px;
-  border: none;
-  cursor: pointer;
-  background-color: transparent;
-  /* show the menu image */
-  background-image: url("../images/menu.svg");
-  background-size: 100%;
-}
-
-/* svg img */
-.img-menu {
-  height: 20px;
-}
 
 /* Navbar links */
 
 /* Screen is in 'portrait' orientation (mobile view), hide Navbar (Trips, Contact, Login, Register) */
 /* (desktop view is handled in the media query below) */
 
-nav {
+nav ul {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
 }
 
-nav p {
-  margin: 0;
+header div {
+  flex: 1 0 50%;
 }
 
-nav div ul {
-  display: none;
-  /* margin-right: 20rem; */
+nav {
+  flex: 1 0 100%;
 }
 
-.visible {
+/* .visible {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
   margin: 0 auto;
   padding-right: 3rem;
+} */
+
+.toggle {
+  display: block;
+  font-size: 20px;
+  text-align: right;
+  padding: 0.5em 1em;
+  /* margin-top: 0.5em; */
 }
 
-nav a{
-  color: rgb(63, 70, 99);
+.fas {
+  color: #28399b;
+}
+
+nav {
+  display: none;
+}
+
+.item {
+  width: 100%;
+  text-align: center;
+}
+
+.active nav {
+  display: block;
+  /* background-color: #ff5a5f; */
+}
+.active nav ul {
+  margin: 0;
+}
+
+nav a {
+  display: block;
+  color: #222222;
   padding: 0.5em 1em;
 }
 
-
 nav ul li {
-  font-weight: 700;
+  font-weight: 500;
 }
 
 /* hover, active, and current page effects */
 nav a:hover {
   border: 0.5px solid #f1edee;
   border-radius: 3px;
-}
-    
-nav a:active {
   background-color: #f1edee;
 }
 
+nav a:active {
+  border: 0.5px solid #dddbdb;
+}
+
+/* .current-page {
+  background-image: linear-gradient(cornflowerblue, cadetblue);
+} */
+
 /* Screen is in 'landscape' orientation (desktop view) */
 @media (orientation: landscape) {
-  
+  header div {
+    flex: auto;
+  }
+
+  nav {
+    flex: none;
+  }
+
+  header {
+    padding-left: 5em;
+    padding-right: 3em;
+
+    flex-direction: row;
+    justify-content: space-around;
+  }
+
   nav {
     display: flex;
     flex-direction: row;
+    /* flex: 1; */
+    /* align-self: flex-end; */
+    /* text-align: right; */
   }
-  
-  nav div ul {
-    display: flex;
+
+  nav a {
+    padding: 0.5em 1em;
   }
-  
+
+  nav a:hover {
+    border: 0.5px solid #f1edee;
+    border-radius: 3px;
+    background-color: transparent;
+  }
+
+  .item {
+    width: auto;
+    text-align: center;
+    /* display: block; */
+  }
+
   /* Don't show hamburger menu on desktop view */
-   nav .btn-menu {
+  .toggle {
     display: none;
+    width: 0%;
   }
-  
 }
-
-
-
-
-
