--- a/css/services.css
+++ b/css/services.css
@@ -1,141 +1,71 @@
-body {
-  background-color: rgb(255, 255, 255);;
-}
-
-.border {
-  /* border-bottom-style: groove; */
-  border-bottom: 1px solid grey;
-}
-
-.mobile{
-  display: none;
-}
-
-.services-main {
-  max-width: 1000px;
-  margin: 0 auto;
-  text-align: center;
-}
-
-.section-margin {
-  margin-top: 5em;
-}
-
-/* .services-main h1 {
-  color: rgb(63, 120, 193);
-} */
-
-.outer-container {
+.services-container {
+  padding: 1em;
   display: flex;
-  
   flex-wrap: wrap;
+
   justify-content: center;
-  align-items: center;
-  margin-bottom: 50px;
+}
 
+.serv-cont1,
+.serv-cont2,
+.serv-cont3,
+.serv-cont4,
+.serv-cont5 {
+  /* margin: 1em; */
+  padding: 1em;
+  padding-bottom: 3em;
+  width: 30.5%;
+  /* box-shadow: 0 0 2px rgb(206, 205, 205); */
+
+  display: flex;
   flex-direction: column;
-  
 }
 
-.service-wrapper {
+.serviceImg {
+  /* height: 100px; */
+}
+
+.serviceImg img {
+  width: 90%;
+}
+
+.service-content {
   display: flex;
-  margin: 15px;
-  border-radius: 15px;
-  /* border: solid 0.5px grey; */
-  width: 100%;
   flex-direction: column;
-}
-.heading-content-services{
-  color: rgb(114, 101, 180);
-}
 
-.inner-container-services {
-  display: flex;
-  margin: 15px;
-  border-radius: 15px;
-  /* border: solid 0.5px grey; */
-  width: 100%;
-}
-
-.img-services{
-  width: 50%;
-  padding: 3em;
-}
-
-.img-services .image {
-  width: 100%;
-
-  /* margin: 10px; */
-  border-radius: 10px;
-}
-
-.content-services{
-  display: flex;
-  
   flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-
-  flex-direction: column;
-
-  width: 50%;
-  padding: 2em;
 }
 
-.list-content-services {
-  display: flex;
-  
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: left;
+.service-content ul {
+  margin-left: 1em;
+}
 
-  flex-direction: column;
+.service-content ul li {
+  margin: 0;
+  padding: 0;
+  padding-bottom: 0.5em;
+  list-style-type: disc;
+  /* list-style-position: inside; */
 
-  width: 100%;
   text-align: left;
 
   font-size: 0.9em;
 }
 
 @media screen and (max-width: 600px) {
-  .mobile{
-    display: block;
-  } 
-  .desktop {
-    display:none;
+  .head {
+    margin-top: 2em;
   }
-  .inner-container-services {
+  /* .solution-container {
     flex-direction: column;
-  }
+  } */
 
-  
-  .img-services{
-    width: 100%;
-    padding: 0;
-  }
-  
-  .img-services .image {
-    width: 80%;
-    padding: 0;
-    /* margin: 10px; */
-    /* border-radius: 10px; */
-  }
-  
-  .content-services{
-    /* display: flex;
-    
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-  
-    flex-direction: column; */
-  
-    width: 80%;
-    padding: 0;
+  .serv-cont1,
+  .serv-cont2,
+  .serv-cont3,
+  .serv-cont4,
+  .serv-cont5 {
     margin: auto;
-    padding-bottom: 1em;
-  }  
+    width: 100%;
+  }
 }
-
-
-
