--- a/css/index.css
+++ b/css/index.css
@@ -102,10 +102,8 @@ body {
 }
 
 /****************************/
-/* Main - Vacation Packages */
+/* Main - Content */
 /****************************/
-
-/* also reference index-images.js for innerHTML */
 
 .index-main {
   max-width: 900px;
@@ -114,10 +112,6 @@ body {
 
   display: flex;
   flex-wrap: wrap;
-}
-
-.intro {
-  height: 400px;
 }
 
 .intro h2,
@@ -173,48 +167,6 @@ body {
   width: 22%;
   padding: 0.5em;
 }
-/* Implementation Model */
-.implementation {
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-}
-
-.implementation-description {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  flex: auto;
-}
-
-.imp-row1,
-.imp-row3 {
-  display: flex;
-  flex: auto;
-}
-.imp-row1 {
-  justify-content: center;
-}
-
-.img-box1,
-.img-box2,
-.img-box3 {
-  margin: auto;
-}
-
-.img-box4 {
-  width: 50%;
-  border: 1px solid blue;
-}
-
-.img-box5 {
-  width: 50%;
-  border: 1px solid orange;
-}
-
-.imp-Img img {
-  width: 90%;
-}
 
 /* worth your time */
 
@@ -222,7 +174,9 @@ body {
   border: 1px solid green;
 }
 .aboutus h2 {
+  margin: 0;
   margin-top: 3em;
+  padding-bottom: 0.6em;
 }
 
 .bottom-arrow {
