--- a/css/services.css
+++ b/css/services.css
@@ -11,11 +11,11 @@
 .serv-cont3,
 .serv-cont4,
 .serv-cont5 {
-  /* margin: 1em; */
+  margin: 1em;
   padding: 1em;
   padding-bottom: 3em;
   width: 30.5%;
-  /* box-shadow: 0 0 2px rgb(206, 205, 205); */
+  box-shadow: 0 0 2px rgb(206, 205, 205);
 
   display: flex;
   flex-direction: column;
@@ -43,7 +43,7 @@
 .service-content ul li {
   margin: 0;
   padding: 0;
-  padding-bottom: 0.5em;
+  padding-bottom: 0.8em;
   list-style-type: disc;
   /* list-style-position: inside; */
 
