--- a/css/solutions.css
+++ b/css/solutions.css
@@ -9,7 +9,7 @@
   margin: 1em;
   padding: 1em;
   width: 33.33%;
-  /* box-shadow: 0 0 2px rgb(206, 205, 205); */
+  box-shadow: 0 0 2px rgb(206, 205, 205);
 
   display: flex;
   flex-direction: column;
