--- a/css/footer.css
+++ b/css/footer.css
@@ -3,10 +3,9 @@
 /******************/
 
 footer {
-  
   /* background-color: rgb(66, 66, 85); */
   background-color: #ebe4e6;
-  
+
   /* animation: BackgroundGradient 30s ease infinite; */
   margin: 0;
   padding-top: 1.5em;
@@ -17,21 +16,22 @@ footer {
   text-align: center;
   margin: 0;
   /* color: rgb(223, 221, 221); */
-  color: grey;
+  /* color: grey; */
 }
 
 .font-small {
-  font-size: 0.8em;
+  font-size: 0.9em;
 }
 
-.title-small{
+.title-small {
   font-size: 0.9em;
   padding-top: 1em;
+  padding-bottom: 0.6em;
 }
 
 .font-copyright {
-  font-size: 0.7em;
-  color: grey;
+  font-size: 0.8em;
+  color: rgb(87, 85, 85);
   padding: 1em;
 }
 
@@ -53,4 +53,3 @@ footer {
 main {
   flex-grow: 1;
 }
-
