--- a/css/header.css
+++ b/css/header.css
@@ -57,10 +57,10 @@ nav {
 
 .toggle {
   display: block;
-  font-size: 20px;
+  font-size: 30px;
   text-align: right;
   padding: 0.5em 1em;
-  /* margin-top: 0.5em; */
+  padding-right: 0.5em;
 }
 
 .fas {
