--- a/css/index.css
+++ b/css/index.css
@@ -115,9 +115,20 @@ body {
   flex-wrap: wrap;
 }
 
+.intro {
+  display: flex;
+  flex-direction: column;
+}
+
 .intro h2,
 .intro p {
+  margin-left: 15px;
+  margin-right: 15px;
+
   flex: auto;
+}
+
+.intro p {
 }
 
 .section-margin {
