--- a/css/index.css
+++ b/css/index.css
@@ -122,13 +122,7 @@ body {
 
 .intro h2,
 .intro p {
-  margin-left: 15px;
-  margin-right: 15px;
-
   flex: auto;
-}
-
-.intro p {
 }
 
 .section-margin {
@@ -281,6 +275,12 @@ body {
 
   main h2 {
     font-size: 1.5rem;
+  }
+
+  .intro h2,
+  .intro p {
+    margin-left: 15px;
+    margin-right: 15px;
   }
 
   .inner-container {
