--- a/css/contact.css
+++ b/css/contact.css
@@ -67,7 +67,7 @@ main form ul button {
   text-align: center;
   /* color: white; */
   /* background-color: rgb(66, 14, 126); */
-  background-color: #29a1c5;
+  background-color: #5bc5e4;
   /* box-shadow:0 0 15px 4px rgba(0,0,0,0.06); */
   border: none;
   border-radius: 3px;
