--- a/css/events.css
+++ b/css/events.css
@@ -42,7 +42,8 @@ body {
 }
 
 .past {
-  /* flex: auto; */
+  /* border: 1px solid blue; */
+  flex: auto;
   text-align: center;
   /* padding: 1em; */
   margin-top: 2em;
@@ -65,6 +66,7 @@ body {
 }
 
 .bottomBorder {
+  flex: auto;
   /* border-bottom: 5px solid #6e686bd0; */
   border-bottom: 4px solid #e4dedf;
 }
@@ -90,7 +92,8 @@ hr.style13 {
 }
 
 .outer-containerEv {
-  margin-top: 5em;
+  margin-top: 3em;
+  padding: 0 1em;
 
   display: flex;
   flex-wrap: wrap;
@@ -99,7 +102,7 @@ hr.style13 {
   /* margin-bottom: 50px; */
   flex-direction: column;
 
-  border: 0.1em solid grey;
+  border: 0.3em inset #5bc5e4;
   width: 350px;
 
   font-size: 0.8em;
@@ -114,6 +117,7 @@ hr.style13 {
 .box img {
   width: 100%;
 }
+
 .event-detail {
   flex: auto;
   display: flex;
@@ -136,14 +140,18 @@ hr.style13 {
   }
 
   .upcoming {
-    flex: auto;
+    width: 100%;
   }
 
   .past {
-    flex: auto;
+    width: 100%;
+  }
+
+  .outer-containerEv {
+    width: 90%;
   }
 
   .event-detail {
-    flex: auto;
+    width: 100%;
   }
 }
