--- a/css/contact.css
+++ b/css/contact.css
@@ -65,13 +65,13 @@ main form ul button {
   font-size: 20px;
   font-weight: 900;
   text-align: center;
-  /* color: white; */
+  color: white;
   /* background-color: rgb(66, 14, 126); */
-  background-color: #5bc5e4;
+  background-color: #123861;
   /* box-shadow:0 0 15px 4px rgba(0,0,0,0.06); */
   border: none;
   border-radius: 3px;
-  padding: 0.5rem 2rem;
+  padding: 0.5rem 2.5rem;
   margin-top: 1rem;
 
   align-self: center;
@@ -79,5 +79,5 @@ main form ul button {
 }
 
 button:hover {
-  background-color: rgba(128, 128, 128, 0.637);
+  background-color: #246fc0;
 }
