--- a/css/events.css
+++ b/css/events.css
@@ -102,7 +102,7 @@ hr.style13 {
   /* margin-bottom: 50px; */
   flex-direction: column;
 
-  border: 0.3em inset #5bc5e4;
+  border: 0.3em inset #28399b;
   width: 350px;
 
   font-size: 0.8em;
