--- a/css/events.css
+++ b/css/events.css
@@ -4,6 +4,10 @@ body {
   background-color: rgb(255, 255, 255);
 }
 
+#eventID {
+  min-height: 70vh;
+}
+
 .events {
   margin: 0 auto;
   text-align: center;
@@ -20,7 +24,7 @@ body {
 } */
 
 .section-margin {
-  margin-top: 3em;
+  /* margin-top: 1em; */
 }
 
 .upcoming {
