--- a/css/footer.css
+++ b/css/footer.css
@@ -9,6 +9,7 @@ footer {
   /* animation: BackgroundGradient 30s ease infinite; */
   margin: 0;
   padding-top: 1.5em;
+  color: #164578;
 }
 
 .layout p,
@@ -32,7 +33,7 @@ footer {
 
 .font-copyright {
   font-size: 0.8em;
-  color: rgb(87, 85, 85);
+  /* color: rgb(87, 85, 85); */
   padding: 1em;
 }
 
