--- a/css/header.css
+++ b/css/header.css
@@ -2,6 +2,20 @@
 /* Header */
 /******************/
 
+/* sticky header */
+header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+header.sticky {
+  transition: all 300ms ease;
+  opacity: 0.9;
+}
+
+/* for maintaining sticky header */
+
 /* header mainly contains logo and navbar */
 header {
   padding-left: 0.5em;
@@ -20,9 +34,27 @@ header {
 /********/
 
 .logo {
-  width: 100px;
+  width: 105px;
   padding: 0;
   transition: transform 330ms ease-in-out;
+}
+
+.logoIndex {
+  width: 105px;
+  padding: 0;
+  transition: transform 330ms ease-in-out;
+
+  position: static;
+  top: 0;
+  /* transition: all 400ms ease-in-out; */
+}
+
+header.sticky .logo {
+  width: 80px;
+  transform: scale(1);
+  position: static;
+  top: auto;
+  transition: width 400ms ease-in-out;
 }
 
 /**********/
@@ -78,16 +110,19 @@ nav {
 
 .active nav {
   display: block;
+  border-bottom: 0.5px solid #f7eef0;
   /* background-color: #ff5a5f; */
 }
 .active nav ul {
   margin: 0;
+  padding-right: 0;
+  padding-bottom: 1em;
 }
 
 nav a {
   display: block;
   /* font-size: bold; */
-  color: #222222;
+  color: #164578;
   padding: 0.5em 1em;
 }
 
@@ -115,16 +150,46 @@ nav a:active {
 .logo:hover {
   padding-top: 0.8em;
   padding-bottom: 0.6em;
-  -ms-transform: scale(1.4); /* IE 9 */
-  -webkit-transform: scale(1.4); /* Safari 3-8 */
-  transform: scale(1.4);
-  /* transition: transform 330ms ease-in-out; */
+  -ms-transform: scale(1.3); /* IE 9 */
+  -webkit-transform: scale(1.3); /* Safari 3-8 */
+  transform: scale(1.3);
+  transition: transform 400ms ease-in-out;
 }
 
 /* Screen is in 'landscape' orientation (desktop view) */
 @media (orientation: landscape) {
   header div {
     flex: auto;
+  }
+
+  #indexBody header.sticky nav ul {
+    position: fixed;
+    top: 0;
+
+    /* transition: all 400ms ease-in-out; */
+  }
+  #indexBody .mainHero {
+    /* margin-top: 114px; */
+    /* margin-top: 10px; */
+  }
+
+  #indexBody nav ul {
+    position: fixed;
+    right: 0;
+    padding-right: 5em;
+    padding-top: 1em;
+  }
+
+  .logoIndex {
+    position: absolute;
+    /* zoom: 3%; */
+    width: 120px;
+    top: 0;
+    /* transition: all 400ms ease-in-out; */
+    /* will-change: transform; */
+    padding-top: 1em;
+    transform: scale(1);
+    transition: width 0.5s ease-in-out;
   }
 
   nav {
