--- a/css/index.css
+++ b/css/index.css
@@ -5,24 +5,25 @@ body {
 /****************/
 /* HERO Section */
 /****************/
+
 .hero {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
 
   flex: auto;
-
+  /* https://images.unsplash.com/photo-1473091534298-04dcbce3278c?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80 */
   background-image: url("https://images.unsplash.com/photo-1473091534298-04dcbce3278c?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80");
 
   align-items: flex-start;
   justify-content: flex-start;
 
-  min-height: 100vh;
+  min-height: 90vh;
   /* margin: 0; */
   /* margin-bottom: 3em; */
   padding-left: 5em;
 
-  background-size: cover;
+  background-size: 100vw;
   background-position: right bottom;
   background-color: transparent;
 
